--- a/Day_1_ML.ipynb
+++ b/Day_1_ML.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Day-1_ML.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN7hI6H1FOSg2P7KFCUychf",
+      "authorship_tag": "ABX9TyMlXJINxYSZp6f+YKDaBLj8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -236,27 +236,25 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 128
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ROQivjPSRb2K",
-        "outputId": "6a8bbcc4-1909-4ba0-b87e-d578c6c75478"
+        "outputId": "b871e00a-f547-4476-e8ba-fe405453b366"
       },
       "source": [
-        "lst1 = [1.2.34.]\n",
+        "lst1 = [1,2,3,4,]\n",
         "arr=np.array(lst1)\n",
         "print(arr)\n",
         " "
       ],
-      "execution_count": 17,
+      "execution_count": 21,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-9850261b06e1>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    lst1 = [1.2.34.]\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "stream",
+          "text": [
+            "[1 2 3 4]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -264,34 +262,54 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 162
+          "base_uri": "https://localhost:8080/"
         },
         "id": "YWjxb48tSeRy",
-        "outputId": "b4560c00-deeb-41d7-b386-5c91327ad2ea"
+        "outputId": "783339f8-4a1d-4d0a-98a4-4002f06b4534"
       },
       "source": [
         "print(arr + 1)"
       ],
-      "execution_count": 20,
+      "execution_count": 22,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-20-2137b13d20b3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marr\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'arr' is not defined"
-          ]
+          "output_type": "stream",
+          "text": [
+            "[2 3 4 5]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "s3EMivP3Sl3X"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s3EMivP3Sl3X",
+        "outputId": "de5d8a09-d2e5-425d-c3c8-28a54783637b"
+      },
+      "source": [
+        "arr1=np.array([[1,2,3,4],[5,6,7,8]], ndmin=2) #ndim means n dimension\n",
+        "print(arr1)"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[1 2 3 4]\n",
+            " [5 6 7 8]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t7kbuk1ZViY0"
       },
       "source": [
         ""
