--- a/Day_1_ML.ipynb
+++ b/Day_1_ML.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Day-1_ML.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMlXJINxYSZp6f+YKDaBLj8",
+      "authorship_tag": "ABX9TyPj4QBtIrxh5/E+xbI2tMAG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -309,7 +309,55 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t7kbuk1ZViY0"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t7kbuk1ZViY0",
+        "outputId": "85881feb-2ee3-41c1-8825-3aa7fc4227f3"
+      },
+      "source": [
+        "arr2=list(arr1)\n",
+        "print(arr2)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[array([1, 2, 3, 4]), array([5, 6, 7, 8])]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L__OLNkcWLTC",
+        "outputId": "f148f84b-d786-402f-d54c-c23022b84330"
+      },
+      "source": [
+        "print(type(arr1),\n",
+        "type(arr2))"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'numpy.ndarray'> <class 'list'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dikz2thIWPpE"
       },
       "source": [
         ""
